<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>laser_uav_px4_api</name>
  <version>1.0.0</version>
  <description>ROS2 API for PX4 UAV control and communication</description>
  
  <maintainer email="your.email@example.com">Marcio</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Core ROS2 dependencies -->
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  
  <!-- Message dependencies -->
  <depend>laser_msgs</depend>
  <depend>std_srvs</depend>
  <depend>sensor_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>px4_msgs</depend>
  
  <!-- System dependencies -->
  <depend>eigen</depend>
  
  <!-- Launch dependencies -->
  <exec_depend>launch_ros</exec_depend>

  <!-- Testing dependencies -->
  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>